<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/main_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_card"
            android:textColor="#ff0099cc"
            android:textStyle="bold" />

        <android.support.v7.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
    		xmlns:tools="http://schemas.android.com/tools"
   		 	xmlns:grid="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            grid:columnCount="2"
            grid:rowCount="5" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="0"
                android:gravity="center_horizontal"
                android:text="@string/current_level" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="0"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/current_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusDown="@+id/current_exp"
                    android:nextFocusRight="@+id/current_exp" />

                <EditText
                    android:id="@+id/current_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusDown="@+id/target_level"
                    android:nextFocusLeft="@+id/current_level"
                    android:nextFocusRight="@+id/target_level" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="1"
                android:text="@string/target_level" />

            <EditText
                android:id="@+id/target_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="1"
                android:ems="3"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:maxLength="3"
                android:nextFocusDown="@+id/feeder_level"
                android:nextFocusLeft="@+id/current_exp"
                android:nextFocusRight="@+id/feeder_level" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="2"
                android:text="@string/exp_needed" />

            <EditText
                android:id="@+id/exp_needed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="2"
                android:gravity="center_horizontal"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="3"
                android:text="@string/feeders_needed" />

            <EditText
                android:id="@+id/feeders_needed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="3"
                android:gravity="center_horizontal"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="4"
                android:text="@string/bonus" />

            <CheckBox
                android:id="@+id/bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="4"
                android:gravity="right" />
        </android.support.v7.widget.GridLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ff33b5e5" />

        <TextView
            android:id="@+id/feeder_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/feeder_card"
            android:textColor="#ffff4444"
            android:textStyle="bold" />

        <android.support.v7.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
    		xmlns:tools="http://schemas.android.com/tools"
    		xmlns:grid="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            grid:columnCount="2"
            grid:rowCount="6" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="0"
                android:text="@string/level" />

            <EditText
                android:id="@+id/feeder_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="0"
                android:ems="3"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:maxLength="3"
                android:nextFocusDown="@+id/card_num"
                android:nextFocusLeft="@+id/target_level"
                android:nextFocusRight="@+id/card_num" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="1"
                android:text="@string/star_rating" />

            <Spinner
                android:id="@+id/stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="1"
                android:entries="@array/stars"
                android:prompt="@string/star_prompt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="2"
                android:text="@string/blessing_level" />

            <Spinner
                android:id="@+id/blessing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="2"
                android:entries="@array/blessings"
                android:gravity="right"
                android:prompt="@string/blessing_prompt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="3"
                android:text="@string/type" />

            <CheckBox
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="3"
                android:gravity="right" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="4"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_num" />

                <EditText
                    android:id="@+id/card_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusLeft="@+id/feeder_level" />
            </LinearLayout>

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="4"
                android:text="@string/add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="0"
                grid:layout_row="5"
                android:text="@string/exp_gain" />

            <EditText
                android:id="@+id/exp_gain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                grid:layout_column="1"
                grid:layout_row="5"
                android:gravity="center_horizontal"
                android:inputType="textMultiLine" />
        </android.support.v7.widget.GridLayout>
    </LinearLayout>

</ScrollView>