<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quest_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceFragment" >

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	xmlns:grid="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        grid:columnCount="2"
        grid:rowCount="8" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="0"
            grid:layout_row="0"
            android:text="@string/episode" />

        <Spinner
            android:id="@+id/episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="1"
            grid:layout_row="0"
            android:entries="@array/episodes"
            android:prompt="@string/episode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="0"
            grid:layout_row="1"
            android:text="@string/quest" />

        <Spinner
            android:id="@+id/quest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="1"
            grid:layout_row="1"
            android:entries="@array/quests"
            android:prompt="@string/quest" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="0"
            grid:layout_row="2"
            android:text="@string/allies" />

        <Spinner
            android:id="@+id/allies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="1"
            grid:layout_row="2"
            android:prompt="@string/allies" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="0"
            grid:layout_row="3"
            android:text="@string/quest_exp" />

        <EditText
            android:id="@+id/quest_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="1"
            grid:layout_row="3"
            android:inputType="number" />
        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="0"
            grid:layout_row="4"
            android:text="@string/cooldown" />

        <EditText
            android:id="@+id/cooldown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="1"
            grid:layout_row="4"
            android:inputType="number" />
        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="0"
            grid:layout_row="5"
            android:text="@string/monsters" />

        <EditText
            android:id="@+id/monsters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="1"
            grid:layout_row="5"
            android:inputType="number" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="0"
            grid:layout_row="6"
            android:text="@string/num_runs" />

        <EditText
            android:id="@+id/num_runs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="1"
            grid:layout_row="6"
            android:inputType="number" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="0"
            grid:layout_row="7"
            android:text="@string/time_needed" />

        <EditText
            android:id="@+id/time_needed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            grid:layout_column="1"
            grid:layout_row="7"
            android:inputType="number" />
    </android.support.v7.widget.GridLayout>

</ScrollView>